log/build_2026-06-12_01-45-27/fishbot_application/stderr.log
  File "/home/s-lin/LIN/ros2_ws/chapt6_ws/install/fishbot_application/lib/python3.12/site-packages/fishbot_application/robot_env.py", line 135
    )
    ^
SyntaxError: unmatched ')'

